# Sorting

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  sort.h  sorter
src/: main.c  sort.c
test/: Makefile  test  test.c  test.py
